# milter_altermime

./: CMakeLists.txt  LICENSE  README.md  milter_altermime.ini  milter_altermime.service
src/: altermimeWrapper.cpp  altermimeWrapper.h  configdata.cpp  configdata.h  milter_altermime.cpp
